feat: add sakai layout, add login page

--- a/src/locales/us.json
+++ b/src/locales/us.json
@@ -10,6 +10,7 @@
   "auto_close": "Auto Close",
   "avg": "Avg",
   "balance": "Balance",
+  "basic": "Basic",
   "buy": "Buy",
   "buy_later": "Buy Later",
   "cancel": "Cancel",
@@ -39,7 +40,9 @@
   "email_cannot_be_empty": "Email cannot be empty",
   "email_is_invalid": "Email is invalid",
   "email_not_verified": "Email not verified",
+  "enter_password": "Enter password",
   "enter_quantity": "Enter Quantity",
+  "enter_username": "Enter username",
   "err_assist_not_support": "Assist only support qty = 1",
   "err_assisting_is_full": "Assisting is full",
   "err_cancel_order_failed": "Cancel order failed",
@@ -52,6 +55,7 @@
   "error": "Error",
   "failed": "Failed",
   "filled": "Filled",
+  "forget_password": "Forget password",
   "forgot_password": "Forgot password",
   "future": "Future",
   "future_trade": "Future Trade",
@@ -121,10 +125,13 @@
   "send": "Send",
   "server_error": "Server Error",
   "settings": "Settings",
+  "sign_in": "Sign in",
+  "sign_in_to_continue": "Sign in to continue",
   "stock": "Stock",
   "stock_already_exists": "Stock already exists",
   "stock_dose_not_exist": "Stock dose not exist",
   "stock_number": "Stock Number",
+  "stocks_data": "Stocks Data",
   "strategy": "Strategy",
   "submitted": "Submitted",
   "success": "Success",
