--- a/src/locales/tw.json
+++ b/src/locales/tw.json
@@ -10,6 +10,7 @@
   "auto_close": "自動平倉",
   "avg": "均價",
   "balance": "損益",
+  "basic": "基本",
   "buy": "買進",
   "buy_later": "回補",
   "cancel": "取消",
@@ -39,7 +40,9 @@
   "email_cannot_be_empty": "Email 不能空白",
   "email_is_invalid": "Email 格式錯誤",
   "email_not_verified": "Email 尚未驗證",
+  "enter_password": "輸入密碼",
   "enter_quantity": "輸入數量",
+  "enter_username": "輸入帳號",
   "err_assist_not_support": "助理不支援",
   "err_assisting_is_full": "助理已滿",
   "err_cancel_order_failed": "取消訂單失敗",
@@ -52,6 +55,7 @@
   "error": "錯誤",
   "failed": "失敗",
   "filled": "已成交",
+  "forget_password": "忘記密碼",
   "forgot_password": "忘記密碼",
   "future": "期貨",
   "future_trade": "期貨交易",
@@ -121,10 +125,13 @@
   "send": "送出",
   "server_error": "伺服器錯誤",
   "settings": "設定",
+  "sign_in": "登入",
+  "sign_in_to_continue": "登入以繼續",
   "stock": "股票",
   "stock_already_exists": "該股票已存在",
   "stock_dose_not_exist": "股票不存在",
   "stock_number": "股票代號",
+  "stocks_data": "股票資料",
   "strategy": "策略選股",
   "submitted": "已送出",
   "success": "成功",
