feat: "Implement localized routing and UI enhancements"
- The "eslint-plugin-cypress" and "vitest" versions have been updated in the "package.json" file.
- In the "LocaleDropdown.vue" file, additional logic has been added to watch changes in the locale and update the local storage and router accordingly. The dropdown options are also updated to "availableLocales".
- The "i18n.ts" file now checks for a locale in local storage during setup and uses it as the default if found.
- User interface changes have been made in the "AppTopbar.vue" file, moving the user label next to the user icon.
- New translations for "page_home", "page_stocks", "page_login", and "page_realtime_future" have been added to both the "tw.json" and "us.json" locale files.
- Meta title tags have been added to the routes in "BasicStocks.vue", "HomePage.vue", "LoginPage.vue", and "RealtimeFuture.vue". These use the new translations added to the locale files.
- In the router setup file "index.ts", a new function has been added to set the document title based on the current locale and route meta title.

--- a/src/locales/tw.json
+++ b/src/locales/tw.json
@@ -158,5 +158,9 @@
   "wallet": "錢包",
   "warn": "警告",
   "warning": "警告",
-  "welcome": "歡迎"
+  "welcome": "歡迎",
+  "page_home": "首頁",
+  "page_stocks": "股票",
+  "page_login": "登入",
+  "page_realtime_future": "即時期貨"
 }
