feat: "Refactor ad file structure and update locale files"
- The `ads.txt` file has been moved from the nginx adsense directory to the public directory.
- The reference to `ads.txt` in the Nginx configuration has been removed.
- The language locale files `tw.json` and `us.json` have been updated with a new key-value pair for "back_to_home".
- A new ESLint configuration file has been added under the `src/pages` directory.
- A new Vue file `[...all].vue` has been added, which includes a 404 error page layout.

--- a/src/locales/us.json
+++ b/src/locales/us.json
@@ -162,5 +162,6 @@
   "page_home": "Home",
   "page_stocks": "Stocks",
   "page_login": "Login",
-  "page_realtime_future": "Realtime Future"
+  "page_realtime_future": "Realtime Future",
+  "back_to_home": "Back to Home"
 }
