--- a/src/locales/tw.json
+++ b/src/locales/tw.json
@@ -162,5 +162,6 @@
   "page_home": "首頁",
   "page_stocks": "股票",
   "page_login": "登入",
-  "page_realtime_future": "即時期貨"
+  "page_realtime_future": "即時期貨",
+  "back_to_home": "回到首頁"
 }
