feat: "Implement User Verification Functionality and UI"
- Added a new function `VerifyUser` in `auth.ts` for verifying a user with a given username and uuid.
- Updated the localization files (`tw.json` and `us.json`) with new strings related to user verification.
- Changed the font size of the 404 error message in `[...all].vue`.
- Added a new Vue component for user verification (`[user]/[uuid].vue`), which calls the `VerifyUser` function on mount.
- Updated the `vite.config.ts` to include a resolver for Vue.

--- a/src/locales/tw.json
+++ b/src/locales/tw.json
@@ -163,5 +163,8 @@
   "page_stocks": "股票",
   "page_login": "登入",
   "page_realtime_future": "即時期貨",
-  "back_to_home": "回到首頁"
+  "back_to_home": "回到首頁",
+  "verify_user": "驗證使用者",
+  "user_verified": "使用者已驗證",
+  "user_not_verified": "使用者尚未驗證"
 }
